--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -281,6 +281,10 @@ a {
 			z-index: -1;
 		}
 	}
+	.content {
+		margin-bottom: 40px; /* Add space between text and image grid */
+	}
+	
 	.image-grid {
 		display: flex;
 		flex-wrap: wrap;
@@ -321,7 +325,13 @@ a {
 			flex: 1 1 calc(100% - 20px); /* 1 item per row on phones */
 			font-size: 1.2em; /* Adjust font size for smaller screens */
 		}
+	
+		.content p {
+			font-size: 1em; /* Adjust font size for readability */
+			line-height: 1.5; /* Increase line height for better readability */
+		}
 	}
+	
 	
 	
 	@-webkit-keyframes spinner-hide {
